# Sokyoei.github.io

./: .editorconfig  .gitignore  .markdownlint.jsonc  404.html  README.md  build.ps1  clean.ps1  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
Code/: index.html
Docker/: Dockerfile  index.html
Git/: index.html
Kafka/: index.html
Linux/: index.html
Linux/CentOS/: index.html
Linux/Ubuntu/: index.html
MariaDB/: index.html  mariadb.sql
Redis/: index.html
SUMO/: index.html
SVN/: index.html
TCPIP/: index.html
VMware/: index.html
Vim/: index.html
WRF/: index.html  namelist.input.3dvar  namelist.input.4dvar
WRF/data/: index.html
WRF/error/: index.html
WRF/run/: index.html
Web/: index.html
Windows/: Windows.bat  index.html
docs/: Code.md  Git.md  SUMO.md  SVN.md  TCPIP.md  VMware.md  Vim.md  Web.md  index.md
docs/Docker/: index.md
docs/Kafka/: index.md
docs/Linux/: .bashrc  CentOS.md  index.md
docs/MariaDB/: index.md
docs/WRF/: build.md  data.md  error.md  gen_be_wrapper.ksh  index.md  run.md
docs/Windows/: index.md
docs/nginx/: index.md
docs/redis/: index.md
docs/stylesheets/: extra.css
nginx/: index.html  nginx.conf
redis/: redis.conf
search/: search_index.json
src/sokyoei_github_io/: __init__.py
stylesheets/: extra.css
